--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=37c88554e0bd50332a8da5d3479ae362
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://rc_super_admin:rc1234@127.0.0.1:5432/ranked_choice_1?serverVersion=13.5&charset=utf8"
 ###< doctrine/doctrine-bundle ###
